# Libratech

./: CMakeLists.txt  main.cpp
Controlador/: AutenticacionController.cpp  AutenticacionController.h  BibliotecaController.cpp  BibliotecaController.h  BibliotecaFilterModel.cpp  BibliotecaFilterModel.h  HistorialController.cpp  HistorialController.h  LibraTechException.h  LibroRepository.h  RecomendacionController.cpp  RecomendacionController.h  Repository.h  SingletonDB.cpp  SingletonDB.h  UserFactory.cpp  UserFactory.h
Modelo/: Administrador.cpp  Administrador.h  BibliotecaListModel.cpp  BibliotecaListModel.h  HistorialListModel.cpp  HistorialListModel.h  Libro.cpp  Libro.h  RegistroHistorial.h  Usuario.cpp  Usuario.h  UsuarioRegular.cpp  UsuarioRegular.h
Vista/: bibliotecavirtual.qrc  main.qml
tests/: TestLibro.cpp  TestLibro.h  TestLibroRepository.cpp  TestLibroRepository.h
